# drone-tracker

./: .gitignore  CLAUDE.md  CMakeLists.txt  PROJECT_REPORT.md  README.md  dump_nano.txt  dump_ncc.txt  gt_flight01.csv  gt_flight01_drone2.csv  harvest_all.sh  initial-prompt.md  initial.txt
app/: CMakeLists.txt  calibrate.cpp  detect.cpp  horizon_calib.cpp  live_track.cpp  main.cpp  replay.cpp  stabilize.cpp  track.cpp  video_bench.cpp  video_eval.cpp
common/: CMakeLists.txt
common/include/dtrack/common/: cue.hpp  ring_buffer.hpp  time.hpp  types.hpp
core/: CMakeLists.txt
core/include/dtrack/core/: ring_buffer.hpp  time.hpp  types.hpp
data/: flight_02_084915.telemetry.csv  flight_03_085014.telemetry.csv
data/pseudo/: flight_01_clean.csv  flight_01_probe.csv  flight_01_raw.csv  flight_01_test.csv  flight_02_clean.csv  flight_02_raw.csv  flight_03_clean.csv  flight_03_raw.csv
detection/: CMakeLists.txt
detection/include/dtrack/detection/: clutter_discriminator.hpp  detect_stage.hpp  detector.hpp  discriminator.hpp  mog_detector.hpp  moving_target_detector.hpp  sky_region_detector.hpp  stability_discriminator.hpp
detection/src/: clutter_discriminator.cpp  mog_detector.cpp  moving_target_detector.cpp  sky_region_detector.cpp  stability_discriminator.cpp
fusion/: CMakeLists.txt
fusion/include/dtrack/fusion/: simple_track_fusion.hpp  track_fusion.hpp
fusion/src/: simple_track_fusion.cpp
guidance/: CMakeLists.txt
guidance/include/dtrack/guidance/: guidance_controller.hpp  lock_integrity.hpp  nano_siamese_tracker.hpp  ncc_template_tracker.hpp  single_target_tracker.hpp  yolo_roi_tracker.hpp
guidance/src/: guidance_controller.cpp  lock_integrity.cpp  nano_siamese_tracker.cpp  ncc_template_tracker.cpp  yolo_roi_tracker.cpp
io/: CMakeLists.txt
io/include/dtrack/io/: camera_source.hpp  camera_stage.hpp  frame_source.hpp  imu_source.hpp  recorded_frame_source.hpp  recorded_telemetry_source.hpp  synthetic_camera_source.hpp  synthetic_frame_source.hpp  synthetic_imu_source.hpp  synthetic_scene.hpp  telemetry_log.hpp  telemetry_source.hpp  video_camera_source.hpp
io/src/: recorded_frame_source.cpp  recorded_telemetry_source.cpp  synthetic_camera_source.cpp  synthetic_imu_source.cpp  telemetry_log.cpp  video_camera_source.cpp
memory/: MEMORY.md  feedback-clean-slate-teach.md  project-drone-tracker-decisions.md  reference-telemetry-csv.md  user-murat.md
ml/: PHASE0.md  budget_probe.py  demo_video.py  eval_liftoff.py  finetune_liftoff.py  make_crops.py  make_liftoff_crops.py  make_model.py  refine_labels.py  shrink_sweep.py  train_crops.py  yolo11_drone.yaml
pipeline/: CMakeLists.txt
pipeline/include/dtrack/pipeline/: istage.hpp  pipeline.hpp  stage.hpp
scripts/: joy_monitor.py  kalman_selftest.py  screen_track.py  wsl_probe.sh
stabilization/: CMakeLists.txt
stabilization/include/dtrack/stabilization/: gyro_flow_stabilizer.hpp  klt_gyro_stabilizer.hpp  optical_flow_stabilizer.hpp  stabilize_stage.hpp  stabilizer.hpp
stabilization/src/: gyro_flow_stabilizer.cpp  klt_gyro_stabilizer.cpp  optical_flow_stabilizer.cpp
tests/: CMakeLists.txt  bench_pipeline.cpp  test_alpha_beta_tracker.cpp  test_cue_recovery.cpp  test_detector.cpp  test_discriminator.cpp  test_fusion.cpp  test_guidance.cpp  test_gyro_stabilizer.cpp  test_imm_tracker.cpp  test_kalman_math.cpp  test_lock_integrity.cpp  test_pdaf_clutter.cpp  test_ring_buffer.cpp  test_stabilizer.cpp  test_synthetic_source.cpp  test_telemetry_interp.cpp  test_track_velocity.cpp  test_tracker.cpp
tools/: collect_trajectories.py  eval_tracker.py  filter_trajectories.py  label_gt.py  sample_viz.py  viz_seqs.py  viz_trajectories.py
tracking/: CMakeLists.txt
tracking/include/dtrack/tracking/: alpha_beta_tracker.hpp  imm_tracker.hpp  kalman_core.hpp  kalman_tracker.hpp  multi_target_tracker.hpp  track_stage.hpp  tracker.hpp
tracking/src/: alpha_beta_tracker.cpp  imm_tracker.cpp  kalman_tracker.cpp  multi_target_tracker.cpp
train/: build_dataset.py  dataset.py  export_onnx.py  model.py  train.py
